# D_z_10.1

./: .coverage  .env  .flake8  README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  financial_transactions.py  generators.py  main.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test.utils.py  test_arrrs.py  test_count_transactions_by_category.py  test_decorators.py  test_filter_transactions_by_description.py  test_generators.py  test_main.py  test_masks.py  test_processig.py  test_widget.py
tests/logs/: mylog.txt
